--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,34 @@
-
+graphql:
+      servlet:
+           mapping: /graphql
+           enabled: true
+           corsEnabled: true
+           cors:
+              allowed-origins: http://some.domain.com
+           # if you want to @ExceptionHandler annotation for custom GraphQLErrors
+           exception-handlers-enabled: true
+           contextSetting: PER_REQUEST_WITH_INSTRUMENTATION
+graphiql:
+    mapping: /graphiql
+    endpoint:
+      graphql: /graphql
+      subscriptions: /subscriptions
+    subscriptions:
+      timeout: 30
+      reconnect: false
+    static:
+      basePath: /
+    enabled: true
+    pageTitle: GraphiQL
+    cdn:
+        enabled: false
+        version: 0.13.0
+    props:
+        resources:
+            query: query.graphql
+            defaultQuery: defaultQuery.graphql
+            variables: variables.graphql
+        variables:
+            editorTheme: "solarized light"
+    headers:
+        Authorization: "Bearer <your-token>"
