--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.graphql-java-kickstart</groupId>
+			<artifactId>graphql-java-tools</artifactId>
+			<version>6.0.2</version>
+		</dependency>
+
 		<!-- testing facilities -->
 		<dependency>
 			<groupId>com.graphql-java-kickstart</groupId>
