Fix graphql schema location pattern

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ graphql:
            # if you want to @ExceptionHandler annotation for custom GraphQLErrors
            exception-handlers-enabled: true
            contextSetting: PER_REQUEST_WITH_INSTRUMENTATION
+    tools:
+        schema-location-pattern: "**/*.graphql"
+        introspection-enabled: true
 graphiql:
     mapping: /graphiql
     endpoint:
