Fix graphql schema location pattern

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ graphql:
         exception-handlers-enabled: true
         contextSetting: PER_REQUEST_WITH_INSTRUMENTATION
     tools:
-        schema-location-pattern: "**/*.graphql"
+        schemaLocationPattern: "**/*.graphql"
         introspection-enabled: true
 graphiql:
     mapping: /graphiql
