--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,6 @@
 			<version>7.0.1</version>
 		</dependency>
 
-		<!-- to embed GraphiQL tool -->
 		<dependency>
 			<groupId>com.graphql-java-kickstart</groupId>
 			<artifactId>graphiql-spring-boot-starter</artifactId>
@@ -56,12 +55,21 @@
 			<version>6.0.2</version>
 		</dependency>
 
-		<!-- testing facilities -->
 		<dependency>
 			<groupId>com.graphql-java-kickstart</groupId>
 			<artifactId>graphql-spring-boot-starter-test</artifactId>
 			<version>7.0.1</version>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 	</dependencies>
 
