--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ graphql:
         # if you want to @ExceptionHandler annotation for custom GraphQLErrors
         exception-handlers-enabled: true
         contextSetting: PER_REQUEST_WITH_INSTRUMENTATION
+
 graphiql:
     mapping: /graphiql
     endpoint:
@@ -32,3 +33,7 @@ graphiql:
             editorTheme: "solarized light"
     headers:
         Authorization: "Bearer <your-token>"
+
+spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-01.cleardb.net/heroku_c8de54e22d7f0e3
+spring.datasource.username=bd763359989d47
+spring.datasource.password=c50dbee1
